syntax="proto3";
package Token.Messages;

message Input{
    string previous_hash = 1;
    uint32 index = 2;
}

message Output{
    string user = 1;
    string token = 2;
}

message Transaction{
    uint32 index = 1;
    repeated Input inputs = 2;
    repeated Output outputs = 3;
}

message Block{
    string previous_hash = 1;
    uint32 height = 2;
    repeated Transaction transactions = 3;
}

message UnclaimedTransaction{
    string utx_hash = 1;
    string tx_hash = 2;
    uint32 index = 3;
    string user = 4;
    string token = 5;
}